--- a/shorthair-admin/test/sourceFileParse/result.html
+++ b/shorthair-admin/test/sourceFileParse/result.html
@@ -1,21 +1,57 @@
 <body>
-	<div class="test">
+	<div class="test" test="test">
 		<div class="register-wrap">
 			<div class="title">注册标题</div>
 			<div class="form-wrap">
 				<div class="form-group">
-					<div class="input-group"><span class="icon">A</span><input class="input-item" /></div>
+					<div class="input-group">
+						<span class="icon">A</span
+						><input
+							class="input-item"
+							type="text"
+							placeholder="请输入11位手机号码"
+						/>
+					</div>
 				</div>
 				<div class="form-group">
-					<div class="input-group input-operator"><span class="icon">A</span><input class="input-item" /></div>
-					<div class="operator"><img class="verifycode-img" /></div>
+					<div class="input-group input-operator">
+						<span class="icon">A</span
+						><input
+							class="input-item"
+							type="text"
+							placeholder="请输入11位手机号码"
+						/>
+					</div>
+					<div class="operator">
+						<img
+							class="verifycode-img"
+							src="http://bg.niu100.com/verifyCode.api"
+							alt=""
+						/>
+					</div>
 				</div>
 				<div class="form-group">
-					<div class="input-group input-operator"><span class="icon">A</span><input class="input-item" /></div>
-					<div class="operator"><button class="message-btn">获取验证码</button></div>
+					<div class="input-group input-operator">
+						<span class="icon">A</span
+						><input
+							class="input-item"
+							type="text"
+							placeholder="请输入11位手机号码"
+						/>
+					</div>
+					<div class="operator">
+						<button class="message-btn">获取验证码</button>
+					</div>
 				</div>
 				<div class="form-group">
-					<div class="input-group"><span class="icon">A</span><input class="input-item" /></div>
+					<div class="input-group">
+						<span class="icon">A</span
+						><input
+							class="input-item"
+							type="text"
+							placeholder="请输入11位手机号码"
+						/>
+					</div>
 				</div>
 				<button class="register-button">注册领取200元</button>
 			</div>
